chore:制定结构